--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         <section id="Portfolio">
             <h1 class="headings">PORTFOLIO</h1>
             <div class="gallery">
+                <h2>Project 1</h2>
+                <a href="https://github.com/shikaile/Project-1-Rock-or-Stock">GitHub To Project 1 </a>
+                <a href="https://shikaile.github.io/Project-1-Rock-or-Stock/"><img
+                        src="./ASSETS/Images/169165009-e6eec73a-03aa-4903-a2a3-49622160b5a7.png" width="300"
+                        height="300" alt="screenshot of Project 1"></a>
                 <H2>Horiseon</H2>
                 <a href="https://eduardodelgado15.github.io/Challange1/"><img
                         src="./ASSETS/Images/Screen Shot 2022-04-07 at 5.36.32 PM.png" width="300" height="300"
